WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
271634
GraphicsContextGLANGLE does not validate clearBuffers value length
https://bugs.webkit.org/show_bug.cgi?id=271634
Summary
GraphicsContextGLANGLE does not validate clearBuffers value length
Kimmo Kinnunen
Reported
2024-03-25 02:30:29 PDT
GraphicsContextGLANGLE does not validate clearBuffers value length
Attachments
Add attachment
proposed patch, testcase, etc.
Kimmo Kinnunen
Comment 1
2024-03-25 02:30:52 PDT
<
rdar://125222153
>
Kimmo Kinnunen
Comment 2
2024-03-25 02:35:28 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/26401
Kimmo Kinnunen
Comment 3
2024-03-26 01:00:05 PDT
Pull request:
https://github.com/apple/WebKit/pull/1155
EWS
Comment 4
2024-03-26 12:56:35 PDT
Committed
272448.803@safari-7618-branch
(89ee93bd2ea4): <
https://commits.webkit.org/272448.803@safari-7618-branch
> Reviewed commits have been landed. Closing PR #1155 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug