Cherry-pick 272448.803@safari-7618-branch (89ee93bd2ea4). https://bugs.webkit.org/show_bug.cgi?id=271634

GraphicsContextGLANGLE does not validate clearBuffers value length
    https://bugs.webkit.org/show_bug.cgi?id=271634
    rdar://125222153

    Reviewed by Dan Glastonbury.

    Avoid passing too long or small arrays as GL_clearBuffer*v values.

    * Source/WebCore/platform/graphics/angle/GraphicsContextGLANGLE.cpp:
    (WebCore::GraphicsContextGLANGLE::clearBufferiv):
    (WebCore::GraphicsContextGLANGLE::clearBufferuiv):
    (WebCore::GraphicsContextGLANGLE::clearBufferfv):
    (WebCore::GraphicsContextGLANGLE::validateClearBufferv):
    * Source/WebCore/platform/graphics/angle/GraphicsContextGLANGLE.h:
    * Tools/TestWebKitAPI/Tests/WebCore/cocoa/TestGraphicsContextGLCocoa.mm:
    (TestWebKitAPI::TEST_F):

    Canonical link: https://commits.webkit.org/272448.803@safari-7618-branch

Canonical link: https://commits.webkit.org/274313.241@webkitglib/2.44